tests/core/snapshots/graphql-conformance-http-004.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 4,
        "name": "Gqlforge",
        "smallPic": "profile_pic_64",
        "bigPic": "profile_pic_1024"
      }
    }
  }
}
