tests/core/snapshots/graphql-conformance-http-005.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "customer": {
        "id": 4,
        "name": "Gqlforge",
        "date_of_birth": "2000-01-01"
      }
    }
  }
}
