tests/core/snapshots/graphql-conformance-http-005.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  user(id: ID!): User!
  @http(
    url: "http://upstream/user"
    query: [{ key: "id", value: "{{.args.id}}" }]
  )
}

type User {
  dob: String!
  id: ID!
  name: String!
}
