tests/core/snapshots/graphql-conformance-http-007.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

interface Profile {
  handle: String!
  id: ID!
}

type Counter {
  count: Int!
}

type Page implements Profile {
  handle: String!
  id: ID!
  likers: Counter!
}

type Query {
  profiles(handles: [ID!]!): [Profile!]!
  @http(
    url: "http://upstream/profiles"
    query: [{ key: "handles", value: "{{.args.handles}}" }]
  )
}

type User implements Profile {
  friends: Counter!
  handle: String!
  id: ID!
}
