tests/core/snapshots/graphql-conformance-http-010.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input LocationInput {
  lat: Int!
  lon: Int!
}

type Location {
  lat: Int!
  lon: Int!
}

type Point {
  id: ID!
  location: Location
  name: String!
}

type Query {
  nearby(location: LocationInput): Point
  @http(
    url: "http://upstream/nearby"
    query: [
      { key: "lon", value: "{{.args.location.lon}}" }
      { key: "lat", value: "{{.args.location.lat}}" }
    ]
  )
}
