tests/core/snapshots/graphql-conformance-http-015.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input Foo {
  bar: String! = "BUZZ"
}

input VideoSize {
  hdr: Boolean = true
  height: Int!
  width: Int!
}

type Query {
  user(id: ID!): User!
  @http(
    url: "http://upstream/user"
    query: [{ key: "id", value: "{{.args.id}}" }]
  )
}

type User {
  featuredVideo(video: VideoSize! = { width: 1600, height: 900 }): String!
  @expr(
    body: "video_{{.value.id}}_{{.args.video.width}}_{{.args.video.height}}_{{.args.video.hdr}}"
  )
  featuredVideoPreview(video: VideoSize! = {}): String!
  @expr(
    body: "video_{{.value.id}}_{{.args.video.width}}_{{.args.video.height}}_{{.args.video.hdr}}"
  )
  id: ID!
  name: String!
  profilePic(size: Int! = 100, width: Int, height: Int = 100): String!
  @expr(body: "{{.value.id}}_{{.args.size}}_{{.args.width}}_{{.args.height}}")
  searchComments(query: [[String!]!]! = [["today"]]): String!
  @expr(body: "video_{{.value.id}}_{{.args.query}}")
  spam(foo: [Foo!]!): String! @expr(body: "FIZZ: {{.args.foo}}")
}
